--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
       </div>
 
       <div class="message-section">
-        Não houve um único dia desde que nos separamos que eu não pensei em você. Não consigo ouvir certas músicas sem lembrar de nós. As luzes da cidade à noite me trazem memórias de quando te levava pra casa.
+        Não houve um único dia desde que nos separamos que eu não pensei em você. Não consigo ouvir certas músicas sem lembrar de você. As luzes da cidade à noite me trazem memórias de quando te levava pra casa.
       </div>
 
       <div class="message-section">
@@ -234,7 +234,7 @@
       </div>
 
       <div class="message-section">
-        Hoje trabalho no mesmo lugar que você e às vezes te vejo. Fico tão feliz em saber que você está tendo um bom rumo na vida, as vezes te vejo na faculdade realizando seus sonhos. Mas não tenho coragem de me aproximar por pura vergonha do que fiz.
+        Hoje trabalho no mesmo lugar que você e às vezes te vejo. Fico tão feliz em saber que você está tendo um trabalho e correndo atras do seu futuro, as vezes te vejo na faculdade realizando seus sonhos. Mas não tenho coragem de me aproximar por pura vergonha do que fiz.
       </div>
 
       <div class="message-section">
@@ -245,7 +245,7 @@
         Lembro daquele último dia que nos encontramos na praça em frente à sua casa. Ficamos em silêncio, mas eu queria tanto ter dito tudo que estou dizendo agora. Queria ter te abraçado pelo menos uma ultima vez.
       </div>
 
-      <div class="message-section">eu quero repetir isso denovo mas, desde aquele dia que eu te deixei, não teve um unico dia que não pensei em você. eu sei que parece mentira mas não é. as vezes posso estar ouvindo algumas musicas que eu ouvia na época que te conheci que eu fico lembrando de você. tenho dificuldade pra ver as luzes da cidade de longe e não lembrar de você porque isso me faz lembrar quando eu te levava embora pra cidade a noite e conseguia ver aquele monte de luzes e hoje em dia quando vejo eu lembro de você </div>
+      <div class="message-section">eu quero repetir isso denovo mas, desde aquele dia que eu te deixei, não teve um unico dia que não pensei em você. eu sei que parece mentira mas não é, mas imagina pensar em uma pessoa todo santo dia. as vezes posso estar ouvindo algumas musicas que eu ouvia na época que te conheci que eu fico lembrando de você. tenho dificuldade pra ver as luzes da cidade de longe e não lembrar de você porque isso me faz lembrar quando eu te levava embora pra cidade a noite e conseguia ver aquele monte de luzes e hoje em dia quando eu volto da faculdade e vejo eu lembro de você </div>
 
       <div class="message-section">não sei se você tem duvidas ou algo do tipo porque naquela época as pessoas inventavam tanta coisa sobre mim. mas sobre eu ter ficado com outras pessoas ou algo do tipo, eu nunca te troquei por outra pessoa. nunca tive outra pessoa além de você.</div>
 
@@ -254,7 +254,7 @@
       </div>
 
       <div class="message-section">
-        Peço desculpas por ter te deixado no momento que mais precisava de mim. Eu era muito novo e não sabia de muito, mas isso não justifica minha ausência quando você mais precisou, e sei o quanto isso foi ruim porque minha conciencia pesa até hoje.
+        Peço desculpas por ter te deixado no momento que mais precisava de mim. Eu era muito novo e não sabia de muito, mas isso não justifica minha ausência quando você mais precisou, e sei o quanto isso foi ruim porque minha conciencia pesa até hoje com tudo que vc ja passou e eu poderia ter mudado tudo.
       </div>
 
       <div class="message-section">
@@ -262,11 +262,11 @@
       </div>
 
       <div class="message-section">
-        Obrigado por ter sido a pessoa mais importante da minha vida. Obrigado por todos os momentos felizes que vivemos juntos. E, principalmente, obrigado por ter me permitido te amar.
+        Obrigado por ter sido a pessoa mais importante da minha vida. Obrigado por todos os momentos felizes que vivemos juntos. E, principalmente, obrigado por ter me permitido te amar. isso tudo que eu estou dizendo não é um pedido pra voltar a namorar nem nada. mas sim que você me perdoe por tudo que eu fiz.
       </div>
 
       <div class="message-section">
-        eu vou deixar aqui em baixo um jeito de vc me responder se quiser. pode falar o que sentir vontade de verdade. eu fiz isso tudo pra te ouvir de verdade. saber se vc está precisando de algo, nem que seja qualquer coisa se eu conseguir eu te ajudo. mas o mais importante pra mim é que você me perdoe por tudo.
+        eu vou deixar aqui em baixo um jeito de vc me responder, mas só se quiser. pode falar o que sentir vontade de verdade. eu fiz isso tudo pra te ouvir de verdade. saber se vc está precisando de algo, nem que seja qualquer coisa se eu conseguir eu te ajudo. mas o mais importante pra mim é que você me perdoe por tudo.
         <br><br>
         
       </div>
